# ChatBot

./: README.md  main.py  pyproject.toml  req.txt  test.ipynb
Bots/: localai.py  main.py
HybridSearch/: hybrid.ipynb  hybrid2.ipynb
Rag/: simpleRag.ipynb  speech.txt
Rag/db/: chroma.sqlite3
agents/: agent.ipynb
apis/: app.py  client.py
gemma/: app.py
groq/: app.py
huggingface/: hugginface.ipynb  llama.py
