[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langserve>=0.3.3",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "sse-starlette>=3.4.5",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
]
