[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=4.0.0",
    "bs4>=0.0.2",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.14.3",
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchainhub>=0.1.21",
    "langserve>=0.3.3",
    "ollama>=0.6.2",
    "pypdf>=6.14.2",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "streamlit>=1.59.1",
    "uvicorn>=0.51.0",
    "wikipedia>=1.4.0",
]
